# agent-repo-preflight

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  action.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  preflight.yml  release.yml
.playwright-mcp/: page-2026-06-30T03-06-34-602Z.yml  page-2026-06-30T03-06-50-720Z.yml
docs/: ai-agent-safety-checklist.md  deploy.md  github-action.md  rule-authoring.md  threat-model.md
docs/superpowers/plans/: 2026-06-29-scanner-core-cli.md  2026-06-29-web-demo.md
docs/superpowers/specs/: 2026-06-29-action-badge-design.md  2026-06-29-scanner-core-cli-design.md  2026-06-29-web-demo-design.md
examples/clean/: README.md  package.json
examples/clean/src/: index.js
examples/suspicious-mcp/: .mcp.json  CLAUDE.md  README.md
examples/suspicious-node/: README.md  package.json
examples/suspicious-node/scripts/: setup.js
examples/suspicious-python/: .env.example  README.md  setup.py
src/agent_repo_preflight/cli/: main.py
src/agent_repo_preflight/report_renderer/: badge.py  json_report.py  markdown_report.py  terminal_report.py
src/agent_repo_preflight/rules_data/: actions-pull-request-target.yaml  actions-unpinned.yaml  actions-untrusted-pr-exec.yaml  actions-write-all.yaml  agent-instruction-file-present.yaml  agent-run-without-review.yaml  base64-decode-exec.yaml  broad-env-secret-request.yaml  checked-in-binary.yaml  chmod-exec-bit.yaml  credential-path-access.yaml  dependency-custom-registry.yaml  dependency-url-install.yaml  devcontainer-autorun-hook.yaml  direnv-envrc-present.yaml  dns-txt-payload.yaml  dockerfile-remote-exec.yaml  encoded-powershell.yaml  git-config-url-rewrite.yaml  makefile-shell-exec.yaml  mcp-powerful-tool-grant.yaml  netcat-reverse-shell.yaml  node-lifecycle-script-present.yaml  node-postinstall-network-exec.yaml  powershell-download-exec.yaml  powershell-remote-code-exec.yaml  python-custom-build-backend.yaml  python-setup-network.yaml  remote-pipe-to-shell.yaml  reverse-shell-dev-tcp.yaml  ships-install-script.yaml  vscode-folderopen-task.yaml
src/agent_repo_preflight/scanner_core/: acquire_local.py  acquire_remote.py  chains.py  engine.py  facts.py  filetree.py  findings.py  model.py  refine.py  rules.py  scan.py  score.py
src/agent_repo_preflight/scanner_core/detectors/: agent_autoexec.py  agent_instructions.py  base.py  content_patterns.py  dependency_risk.py  github_actions.py  install_hooks.py  secrets_env.py  util.py
src/agent_repo_preflight/web/: __main__.py  app.py  store.py
tests/: test_examples_integration.py  test_packaging.py
tests/cli/: test_cli.py  test_cli_badge.py  test_cli_encoding.py
tests/report_renderer/: test_badge.py  test_renderers.py  test_terminal.py
tests/scanner_core/: test_acquire_remote.py  test_chains.py  test_detector_registry.py  test_engine.py  test_filetree_local.py  test_refine.py  test_rules_loader.py  test_scan.py  test_score.py
tests/scanner_core/detectors/: test_agent_and_secrets.py  test_agent_autoexec.py  test_content_patterns.py  test_dependency_risk.py  test_github_actions.py  test_install_hooks.py
tests/web/: test_imports.py  test_routes.py  test_store.py
(+8 files in other folders)
