[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-repo-preflight"
version = "0.1.0"
description = "Preflight safety scanner for GitHub repos before AI coding agents run them."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["rich>=13.0", "PyYAML>=6.0", "requests>=2.31"]

[project.scripts]
agent-repo-preflight = "agent_repo_preflight.cli.main:main"
agent-preflight = "agent_repo_preflight.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_repo_preflight"]

[tool.hatch.build.targets.wheel.force-include]
"src/agent_repo_preflight/rules_data" = "agent_repo_preflight/rules_data"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
