[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-repo-preflight"
version = "0.1.0"
description = "Preflight safety scanner for GitHub repos before AI coding agents run them."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = ["rich>=13.0", "PyYAML>=6.0", "requests>=2.31"]

[project.scripts]
agent-repo-preflight = "agent_repo_preflight.cli.main:main"
agent-preflight = "agent_repo_preflight.cli.main:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
web = ["fastapi>=0.110", "jinja2>=3.1", "uvicorn>=0.29", "python-multipart>=0.0.9"]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_repo_preflight"]
# Non-.py data files (rule YAMLs, web templates, static assets) live inside the
# package directory and are included automatically by hatchling. No force-include
# is needed — adding one double-packages the files and fails the build.

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by the formatter, not enforced as an error
